# backend/gonlink/src/main/java/online/gonlink/observer/GeneralTrafficObserver.java
@@ -1,15 +1,15 @@
 package online.gonlink.observer;
 
 import com.mongodb.DuplicateKeyException;
-import io.grpc.Status;
-import io.grpc.StatusRuntimeException;
 import lombok.extern.slf4j.Slf4j;
+import online.gonlink.dto.CreateTraffic;
 import online.gonlink.dto.IncreaseTraffic;
+import online.gonlink.dto.Standard;
 import online.gonlink.entity.GeneralTraffic;
+import online.gonlink.exception.ResourceException;
 import online.gonlink.factory.TrafficFactory;
 import online.gonlink.factory.type.TrafficType;
 import online.gonlink.repository.GeneralTrafficRepository;
-import online.gonlink.util.FormatLogMessage;
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.stereotype.Component;
 
@@ -33,24 +33,11 @@ public class GeneralTrafficObserver implements TrafficObserver, CreateTrafficObs
     public boolean increaseTraffic(IncreaseTraffic record) {
         try {
             long increased = repository.increaseTraffic(record.shortCode());
-            if(increased>0) return true;
-            else{
-                log.error(FormatLogMessage.formatLogMessage(
-                        this.getClass().getSimpleName(),
-                        "increaseTraffic < increaseTraffic",
-                        "Unexpected error: {}",
-                        ""
-                ));
-                throw new StatusRuntimeException(Status.INTERNAL.withDescription("Internal Server Error"));
-            }
+            if(increased<=0)
+                throw new ResourceException(Standard.MONTH_TRAFFIC_INCREASE_FAIL.name(), null);
+            return true;
         } catch (Exception e){
-            log.error(FormatLogMessage.formatLogMessage(
-                    this.getClass().getSimpleName(),
-                    "increaseTraffic",
-                    "Unexpected error: {}",
-                    e
-            ));
-            throw new StatusRuntimeException(Status.INTERNAL.withDescription("Internal Server Error"));
+            throw new ResourceException(Standard.INTERNAL.name(), e);
         }
     }
 
@@ -59,34 +46,22 @@ public class GeneralTrafficObserver implements TrafficObserver, CreateTrafficObs
         try {
             repository.deleteById(shortCode);
         } catch (Exception e){
-            log.error(FormatLogMessage.formatLogMessage(
-                    this.getClass().getSimpleName(),
-                    "removeUrl",
-                    "Unexpected error: {}",
-                    e
-            ));
-            throw new StatusRuntimeException(Status.INTERNAL.withDescription("Internal Server Error"));
+            throw new ResourceException(Standard.INTERNAL.name(), e);
         }
     }
 
     @Override
-    public boolean create(IncreaseTraffic record) {
+    public boolean create(CreateTraffic record) {
         ZonedDateTime clientTime = ZonedDateTime.parse(record.trafficDate()).withZoneSameInstant(ZoneId.of(record.zoneId()));
         String date = simpleDateFormatWithTime.format(Date.from(clientTime.toInstant()));
-        GeneralTraffic traffic = (GeneralTraffic) TrafficFactory.createTraffic(TrafficType.GENERAL, record.shortCode(), date);
+        GeneralTraffic traffic = (GeneralTraffic) TrafficFactory.createTraffic(TrafficType.GENERAL, record.shortCode(), record.owner(), record.originalUrl(), date);
         try {
             repository.insert(traffic);
             return true;
         } catch (DuplicateKeyException e){
-            throw new StatusRuntimeException( Status.ALREADY_EXISTS.withDescription("Duplicate Key Error"));
+            throw new ResourceException(Standard.SHORTEN_GENERATE_ALREADY_EXISTS.name(), e);
         } catch (Exception e){
-            log.error(FormatLogMessage.formatLogMessage(
-                    this.getClass().getSimpleName(),
-                    "insert",
-                    "Unexpected error: {}",
-                    e
-            ));
-            throw new StatusRuntimeException(Status.INTERNAL.withDescription("Internal Server Error"));
+            throw new ResourceException(Standard.INTERNAL.name(), e);
         }
     }
 }
