# backend/gonlink/src/main/java/online/gonlink/observer/RealTimeTrafficObserver.java
@@ -1,15 +1,15 @@
 package online.gonlink.observer;
 
 import com.mongodb.DuplicateKeyException;
-import io.grpc.Status;
-import io.grpc.StatusRuntimeException;
 import lombok.extern.slf4j.Slf4j;
+import online.gonlink.dto.CreateTraffic;
 import online.gonlink.dto.IncreaseTraffic;
+import online.gonlink.dto.Standard;
 import online.gonlink.entity.RealTimeTraffic;
+import online.gonlink.exception.ResourceException;
 import online.gonlink.factory.TrafficFactory;
 import online.gonlink.factory.type.TrafficType;
 import online.gonlink.repository.RealTimeTrafficRepository;
-import online.gonlink.util.FormatLogMessage;
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.stereotype.Component;
 
@@ -36,32 +36,17 @@ public class RealTimeTrafficObserver implements TrafficObserver, CreateTrafficOb
     @Override
     public boolean increaseTraffic(IncreaseTraffic record) {
         ZonedDateTime clientTime = ZonedDateTime.parse(record.trafficDate()).withZoneSameInstant(ZoneId.of(record.zoneId()));
-        String date = simpleDateFormatWithTime.format(Date.from(clientTime.toInstant()));
-
         String dateTime = simpleDateFormatWithTime.format(Date.from(clientTime.toInstant()));
         LocalDateTime localDateTime = LocalDateTime.parse(dateTime, dateTimeFormatter);
         int minute = localDateTime.getMinute();
 
         try {
-            long increased = repository.increaseTraffic(record.shortCode(), date);
-            if(increased>0) return true;
-            else{
-                log.error(FormatLogMessage.formatLogMessage(
-                        this.getClass().getSimpleName(),
-                        "increaseTraffic < increaseTraffic",
-                        "Unexpected error: {}",
-                        ""
-                ));
-                throw new StatusRuntimeException(Status.INTERNAL.withDescription("Internal Server Error"));
-            }
+            long increased = repository.increaseTraffic(record.shortCode(), minute);
+            if(increased<=0)
+                throw new ResourceException(Standard.REALTIME_TRAFFIC_INCREASE_FAIL.name(), null);
+            return true;
         } catch (Exception e){
-            log.error(FormatLogMessage.formatLogMessage(
-                    this.getClass().getSimpleName(),
-                    "increaseTraffic",
-                    "Unexpected error: {}",
-                    e
-            ));
-            throw new StatusRuntimeException(Status.INTERNAL.withDescription("Internal Server Error"));
+            throw new ResourceException(Standard.INTERNAL.name(), e);
         }
     }
 
@@ -70,18 +55,12 @@ public class RealTimeTrafficObserver implements TrafficObserver, CreateTrafficOb
         try {
             repository.deleteById(shortCode);
         } catch (Exception e){
-            log.error(FormatLogMessage.formatLogMessage(
-                    this.getClass().getSimpleName(),
-                    "removeUrl",
-                    "Unexpected error: {}",
-                    e
-            ));
-            throw new StatusRuntimeException(Status.INTERNAL.withDescription("Internal Server Error"));
+            throw new ResourceException(Standard.INTERNAL.name(), null);
         }
     }
 
     @Override
-    public boolean create(IncreaseTraffic record) {
+    public boolean create(CreateTraffic record) {
         ZonedDateTime clientTime = ZonedDateTime.parse(record.trafficDate()).withZoneSameInstant(ZoneId.of(record.zoneId()));
         String date = simpleDateFormatWithTime.format(Date.from(clientTime.toInstant()));
         RealTimeTraffic traffic = (RealTimeTraffic) TrafficFactory.createTraffic(TrafficType.REAL_TIME, record.shortCode(), date);
@@ -89,15 +68,9 @@ public class RealTimeTrafficObserver implements TrafficObserver, CreateTrafficOb
             repository.insert(traffic);
             return true;
         } catch (DuplicateKeyException e){
-            throw new StatusRuntimeException( Status.ALREADY_EXISTS.withDescription("Duplicate Key Error"));
+            throw new ResourceException(Standard.SHORTEN_GENERATE_ALREADY_EXISTS.name(), null);
         } catch (Exception e){
-            log.error(FormatLogMessage.formatLogMessage(
-                    this.getClass().getSimpleName(),
-                    "insert",
-                    "Unexpected error: {}",
-                    e
-            ));
-            throw new StatusRuntimeException(Status.INTERNAL.withDescription("Internal Server Error"));
+            throw new ResourceException(Standard.INTERNAL.name(), e);
         }
     }
 }
